<resources>
    <string name="app_name">MenWillBeMen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string name="banner_ad_unit_id">ca-app-pub-4318223458314026/8591145592</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-4318223458314026/3488325592</string>
    <string name="native_medium_ad_unit_id">ca-app-pub-4318223458314026/6302191198</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4318223458314026/8408902794</string>

    <string name="native_small_ad_unit_id">ca-app-pub-4318223458314026/6452661592</string>


    <string name="admob_app_id">ca-app-pub-4318223458314026~2011592393</string>

    <!--<string name="interstitial_ad_unit_id">ca-app-pub-0664570763252260/1769900428</string>-->
    <string name="feedback">Feedback</string>

    <string name="add_message">Add Message</string>
    <string name="select_language">Select Language</string>
    <string name="select_category">Select Category</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_feedback">Enter Feedback, Suggestions, Issues or Queries</string>

    <string name="submit">Submit</string>

    <string name="key_get_data">data</string>
    <string name="key_get_error">error</string>
    <string name="key_get_message">message</string>
    <string name="title_activity_detailed_post">Full</string>

    <string name="thank_you">Thank You</string>
    <string name="feedback_submitted">Your feedback is submitted.</string>
    <string name="done">Done.</string>
    <string name="failed">Oops, something went wrong</string>
    <string name="feedback_failed">Your feedback failed to submitted, Please try again</string>
    <string name="close">Close.</string>
    <string name="no_internet">No internet connection.</string>
    <string name="retry">RETRY</string>
    <string name="retrying">Retrying...</string>
    <string name="loading_more">Loading More...</string>
    <string name="no_more_msgs">No more Messages...</string>


    <!-- Drawer Items -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_change_language">Change Language</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_setting">Setting</string>

    <string name="drawer_item_rating">Rate this App</string>
    <string name="drawer_item_feedback">FeedBack</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>


    <string name="title_activity_posts_by_category">Category</string>
    <string name="title_activity_posts">Posts</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>


    <string name="pref_key_notifications">notifications</string>
    <string name="pref_notifications">Notifications</string>

    <string name="pref_key_fontsize">fontsize</string>
    <string name="pref_fontsize">Font Size</string>
    <string name="pref_default_fontsize">18</string>

    <string name="pref_key_theme_color">theme_color</string>


    <string name="pref_key_animation">animation</string>
    <string name="pref_animation">Animation</string>

    <string name="pref_key_theme">theme</string>
    <string name="pref_theme">Theme</string>
    <string name="title_activity_swype">MenWillBeMen</string>


    <string name="pref_key_swype_animation">swype_animation</string>
    <string name="pref_swype_animation">Swype Animation</string>
    <string name="pref_default_swype_animation">DefaultTransformer</string>


</resources>
